# litreview_bot

./: .env  .gitignore  README.md  convert_ORCID_numbers_to_list.py  get_openalex_ids.py  inverted_abstract_conversion.py  main.py  openalex_ids.py  orcids_list.py  pyproject.toml  test1.py
bot/: handlers.py  keyboards.py  main.py  scheduler.py
crud/: database_entry.py  saved_article_repository.py  sent_article_repository.py
db/: export_database_2csv.py  session.py
db/data/: article_metadata.db
orm/: ORMclasses.py  extracted_articles.py  extracted_articlesORM.py
schema/: extracted_articles.py  extracted_articlesSchema.py
